[package]
name = "flate3"
version = "1.0.2"
authors = ["George Barwood"]
categories = ["compression"]
edition = "2021"
description = "High-performance RFC 1952 compression and de-compression"
license = "MIT OR Apache-2.0"
repository = "https://github.com/georgebarwood/flate3/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#crossbeam = "0.8"
#scoped_threadpool = "0.1.9"